[package]
name = "ushell"
description = "Embedded shell over serial connection"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/ushell"
version = "0.3.5"

[dependencies]
heapless = "0.7.1"
nb = "1.0.0"
uluru = "2.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"
