[package]
name = "ushell"
description = "Embedded shell over serial connection"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/ushell"
version = "0.4.0"

[dependencies]
heapless = "0.8.0"
nb = "1.0.0"
uluru = "3.1.0"
